# openTools

./: .gitmodules  README.md
concatenateOpenQCD/: README.md  concatenate_files.py
cppFitCodes/PCACMass/: getBeMa.cpp  input.in
cppFitCodes/PCACMass/hFiles/: bootstrap.h  loadData.h  obtBest.h  pcacMass.h  readInput.h
cppFitCodes/cppFitCode/: README.md  convergeFit.sh  fitMain.cpp  getData.cpp  input.in
cppFitCodes/cppFitCode/hFiles/: bootstrap.h  fitNM.h  linalg.h  loadData.h  readInput.h
cppFitCodes/scanRunServer/: .gitignore  README.md  automaticFit.sh  cleanDataMass.sh  launchFit.sh  moveToFolder.sh  orgToFolderScan.sh  scwLAUNCHER.sh
extractEffMass/: fetch_data.sh
extract_eff_mass/: README.md  extract_cosh_mass.py  fetch_data.sh
gnuplatex/: README.md  gnp2tex  trialPlot.gn
pythonFitCodes/fitCode/: bootStrap.py  fitFunctionNM.py
pythonFitCodes/getData/: readGetCorr.py
