# Author: Sergio Chaves García-Mascaraque
# Proyecot iniciado en Octubre de 2018
# Contact: sergiozteskate@gmail.com

set colors classic

set xlabel '$x$'
set ylabel 'My pretty and awesome function of x'        # Non -math style
set title 'My title is like this and I love it'

plot sin(x) ls 2 lw 2 title '$\sin(x) - Math style$', \
     cos(x) ls 3 lw 2 title 'cos(x) - Non-Math style', \
     exp(0.1*x) ls 4 lw 2 notitle


# It is always recommended to test the gnuplot script before trying to generate
# the LaTeX file. It can be easily done using 'gnuplot -p nameFile'. Doing it this
# way allows you to avoid problem as compilation time coming from your syntax 

